@@ -28,3 +28,4 @@ macro_kt_plugin(ENABLE_DOWNLOADORDER_PLUGIN downloadorder downloadorder)
 macro_kt_plugin(ENABLE_SHUTDOWN_PLUGIN shutdown shutdown)
 macro_kt_plugin(ENABLE_ZEROCONF_PLUGIN zeroconf zeroconf)
 macro_kt_plugin(ENABLE_MAGNETGENERATOR_PLUGIN magnetgenerator magnetgenerator)
+macro_kt_plugin(ENABLE_STREAMING_PLUGIN streaming streaming)
